added app component skeleton

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<h1>SWAPILICIOUS</h1>
+<app-header></app-header>
+<app-search-parameters></app-search-parameters>
+<app-search-results></app-search-results>
+<app-footer></app-footer>
