search bar + dropdown in search paramter component. Getting ready to merge for data binding

--- a/src/app/search-parameters/search-parameters.component.html
+++ b/src/app/search-parameters/search-parameters.component.html
@@ -1,1 +1,15 @@
-<p>search-parameters works!</p>
+<button mat-button [matMenuTriggerFor]="belowMenu">Choose Your Star Wars Theme</button>
+<mat-menu #belowMenu="matMenu" yPosition="below">
+  <button mat-menu-item>People</button>
+  <button mat-menu-item>Ships</button>
+  <button mat-menu-item>Films</button>
+</mat-menu>
+
+<br/>
+
+<div>
+<label for="search">
+<input matInput type="search" id="search" name="search" placeholder="Search For Your Star Wars {{kind}}" [(ngModel)]="term" >
+</label>
+<button mat-button type="search">SEARCH</button>
+</div>
