implemented service (might not be working)

--- a/src/app/search-results/search-results.component.html
+++ b/src/app/search-results/search-results.component.html
@@ -1,1 +1,6 @@
-<p>search-results works!</p>
+
+<div *ngIf="searchService.results.length">
+  <ul>
+    <li *ngFor="let r of results">{{r.name}}</li>
+  </ul>
+</div>
