header styling in progress

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<div id="headerBar">
+  <div id="vaderDiv">
+    <img src="../../assets/darth-vader-white.png" id="vader">
+  </div>
+  <div>
+    <img src="../../assets/swapiLogo.png" id="logo">
+  </div>
+</div>
+
+
