--- a/src/app/search-results/search-results.component.html
+++ b/src/app/search-results/search-results.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="searchService.results.length">
   <ul>
-    <li *ngFor="let r of results">{{r.name}}</li>
+    <li *ngFor="let r of searchService.results">{{r.name}}</li>
   </ul>
 </div>
