--- a/src/app/search-parameters/search-parameters.component.scss
+++ b/src/app/search-parameters/search-parameters.component.scss
@@ -1,9 +1,31 @@
 #search {
-    min-width: 150px;
-    max-width: 500px;
+    min-width: 60vw;
+    max-width: 80vw;
     width: 100%;
+    height: 50px;
+    font-size: 15pt;
   }
   
-  #search {
-    width: 100%;
+
+
+  .searchSection {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 100vw;
+    margin-top: 20px;
+    padding: 0px;
   }
+
+  .dropdown {
+    order: 1;
+    padding-bottom: 30px;
+  }
+
+  .search {
+    order: 2;
+    padding-top: 20px;
+  }
+  
+  
