--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,10 @@
     <img src="../../assets/darth-vader-white.png" id="vader">
   </div>
   <div>
-    <img src="../../assets/swapiLogo.png" id="logo">
+    <img src="../../assets/swapiLogoFixed.png" id="logo">
+  </div>
+  <div id="falconDiv">
+    <img src="../../assets/falconWhite.png" id="falconImg">
   </div>
 </div>
 
