--- a/src/app/search-results/search-results.component.html
+++ b/src/app/search-results/search-results.component.html
@@ -1,63 +1,66 @@
-<div *ngIf="searchService.results.length">
-  <mat-card *ngIf="searchService.results[0].height">
-    <mat-list *ngFor="let r of searchService.results">
-      <mat-list-item>
+<div *ngIf="searchService.results.length" class="resultsDiv">
+  <mat-card *ngIf="searchService.results[0].height" class="matCard">
+    <mat-list *ngFor="let r of searchService.results" class="peopleResults">
+      <mat-list-item class="listItemPeople">
         <mat-card-title>{{r.name | uppercase}}</mat-card-title>
       </mat-list-item>
-      <mat-list-item>
+      <mat-list-item class="listItemPeople">
         <mat-card-content>
         mass {{r.mass}}, height {{r.height}}
       </mat-card-content>
       </mat-list-item>
-      <mat-list-item>
-        <mat-card-content>
+      <mat-list-item class="listItemPeople">
+        <mat-card-content >
           born {{r.birth_year}}
         </mat-card-content>
       </mat-list-item>
     </mat-list>
   </mat-card>
-  <mat-card *ngIf="searchService.results[0].model">
-    <mat-list *ngFor="let r of searchService.results">
-      <mat-list-item>
+
+  <mat-card *ngIf="searchService.results[0].model" class="matCard">
+    <mat-list *ngFor="let r of searchService.results" class="peopleResults">
+      <mat-list-item class="listItemPeople">
         <mat-card-title>{{r.name | uppercase}}</mat-card-title>
       </mat-list-item>
-      <mat-list-item>
+      <mat-list-item class="listItemPeople">
         <mat-card-content>
           model {{r.model}}
         </mat-card-content>
       </mat-list-item>
-      <mat-list-item>
+      <mat-list-item class="listItemPeople">
         <mat-card-content>
           manufacturer {{r.manufacturer}}
         </mat-card-content>
       </mat-list-item>
-      <mat-list-item>
+      <mat-list-item class="listItemPeople">
         <mat-card-content>
           {{r.length}} in length
         </mat-card-content>
       </mat-list-item>
     </mat-list>
   </mat-card>
-  <mat-card *ngIf="searchService.results[0].title">
-    <mat-list *ngFor="let r of searchService.results">
-        <mat-list-item>
+
+  <mat-card *ngIf="searchService.results[0].title" class="matCard">
+    <mat-list *ngFor="let r of searchService.results" class="peopleResults">
+        <mat-list-item class="listItemPeople">
             <mat-card-title>{{r.title | uppercase}}</mat-card-title>
         </mat-list-item>
-        <mat-list-item>
+        <mat-list-item class="listItemPeople">
             <mat-card-content>
               Episode {{r.episode_id}}
             </mat-card-content>
         </mat-list-item>
-        <mat-list-item>
+        <mat-list-item class="listItemPeople">
             <mat-card-content>
               directed by {{r.director}}
             </mat-card-content>
         </mat-list-item>
-        <mat-list-item>
+        <mat-list-item class="listItemPeople">
             <mat-card-content>
               released on {{r.release_date}}
             </mat-card-content>
         </mat-list-item>
     </mat-list>
   </mat-card>
+
 </div>
