--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -1,3 +1,52 @@
 mat-list-item {
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.matCard {
+    background: black;
+    // width: 50%;
+    border-radius: 15px;
+    justify-content: center;
+    margin: 8px;
+    align-content: space-between;
+    margin-bottom: 5rem;
+    border: 1px dashed yellow;
+}
+
+.resultsDiv {
+    background-color: transparent;
+    width: 35%;
+    border-radius: 15px;
+    display: flex;
+    // align-content: center;
+    margin: auto;
+    justify-content: space-around;
+}
+
+.peopleResults:nth-child(odd) {
+    background: blue;
+    border-radius: 15px;
+    border: 2px solid yellow;
     color: white;
+    .listItemPeople {
+        color: white;
+        font-family: 'Unica One', cursive;
+        font-size: 16px;
+    }
+    margin: 5px;
+}
+.peopleResults:nth-child(even) {
+    background: red;
+    border-radius: 15px;
+    .listItemPeople {
+        color: white;
+        font-family: 'Unica One', cursive;
+    }
+    color: white;
+    border: 1px solid yellow;
+    margin: 5px;
+
 }
