--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -9,7 +9,10 @@ footer {
   
   p {
     margin: 1rem 2rem;
+    font-size: 1.8rem;
     color: white;
+    font-family: 'Unica One', cursive;
+
   }
 
 
