--- a/src/app/search-parameters/search-parameters.component.scss
+++ b/src/app/search-parameters/search-parameters.component.scss
@@ -3,7 +3,10 @@
     max-width: 80vw;
     width: 100%;
     height: 50px;
-    font-size: 15pt;
+    font-size: 18pt;
+    border-radius: 15px;
+    border: none;
+    font-family: 'Unica One', cursive;
   }
   
 
@@ -36,11 +39,16 @@
     background-color: rgba(0, 0, 0, .35);
     padding: 15px 25px 15px 25px;
     font-size: 20px;
+    border-radius: 15px;
+    font-family: 'Unica One', cursive;
     }
 
   #searchBut {
     background-color: rgba(0, 0, 0, .35);
-    padding: 10px 10px 10px 10px;
+    padding: 10px 25px 10px 25px;
+    margin-top: 10px;
     font-size: 19px;
     flex-grow: 0;
+    border-radius: 15px;
+    font-family: 'Unica One', cursive;
   }
